--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/dist/style.css" />
-    <title>Restaurant Page</title>
+    <link rel="stylesheet" href="../dist/style.css" />
+    <title>L'angolo della pizza</title>
 </head>
 <body>
     <div id="content">
